
<resources>
    <!-- Strings related to Main -->
    <string name="btn_reserva">New Supply</string>
    <string name="btn_finaliza">Finish Supply</string>
    <string name="btn_cancela">Cancel Supply</string>
    <string name="btn_precios">Change Prices</string>
    <string name="btn_imprimir">Print Copy</string>
    <string name="btn_config">System Config</string>

    <!-- Strings related to Ticket-->
    <string name="plate">Plate</string>
    <string name="customer_name">Company</string>

    <!-- Strings related to Producto-->
    <string name="titulo_producto">Select Product</string>
    <string name="producto_diesel">DIESEL</string>
    <string name="producto_adblue">AD BLUE</string>
    <string name="producto_rojo">RED DIESEL</string>
    <string name="producto_cancela">CANCEL</string>
    <string name="toast_diesel">Diesel Selected</string>
    <string name="toast_adblue">Ad Blue Selected</string>
    <string name="toast_rojo">Red Diesel Selected</string>

    <!-- String related to PinPad -->
    <string name="titulo_pinpad">Input the Code received by Driver\nCampillo: Drivers identity document\nby replacing the letters with zeros.</string>
    <string name="btn_pinpad_cancel">Cancel</string>
    <string name="btn_pinpad_ok">Ok</string>
    <string name="alert_no_code">You need to input the Code received by the Driver!!</string>
    <string name="spinner_conectando">Contacting Server and Printing, please wait...</string>
    <string name="progress_dialog_transaction">Completing transaction, please wait...</string>
    <string name="titulo_litros">LITERS</string>
    <string name="entrada_litros">Input the Liters for this Supply</string>
    <string name="texto_qr">Scan QR Code from POS receipt</string>
    <string name="pin_code">PIN CODE</string>


    <!-- Strings related to Cambiar Precios -->
    <string name="titulo_precios">Select Product to change the price</string>
    <string name="precio_diesel">DIESEL</string>
    <string name="precio_adblue">AD BLUE</string>
    <string name="precio_rojo">RED DIESEL</string>
    <string name="precio_cancela">CANCEL</string>
    <string name="texto_precio_diesel">Input the new price for Diesel</string>
    <string name="texto_precio_adblue">Input the new price for AdBlue</string>
    <string name="texto_precio_rojo">Input the new price for Red Diesel</string>
    <string name="btn_precio_cancelar">CANCEL</string>
    <string name="btn_precio_aceptar">OK</string>

    <string name="error_no_reservado">Wrong Code or not reserved!!</string>
    <string name="titulo_error_producto">WARNING!!</string>
    <string name="error_tipo_producto">QR incorrect type</string>
    <string name="titulo_error_nored">WARNING!!</string>
    <string name="titulo_error_timeout">WARNING!!</string>
    <string name="error_nored">No Internet Connection, try again</string>
    <string name="error_timeout">No server response, try again or contact to customer service</string>
    <string name="btn_contacto">Contact customer service</string>
    <string name="titulo_contacto">GlobalTank</string>
    <string name="text_contacto">\tContacts:  \t- sat@globaldevelopers.eu \t- 0034672688659 \t- 0034972525421</string>

    <string name="dialogo_qr_diesel">How many QRs of DIESEL have the Ticket?</string>
    <string name="dialogo_qr_adblue">How many QRs of AD BLUE have the Ticket?</string>
    <string name="dialogo_qr_diesel_rojo">How many QRs of RED DIESEL have the Ticket?</string>
    <string name="dialogo_qr_gas">How many QRs of RED DIESEL have the Ticket?</string>
    <string name="mensaje_qr_repetido">This QR allready Scanned!!</string>

    <string name="titulo_imprimir_copia">GlobalSMS - Print Copy</string>

    <string name="app_name">GlobalSMS</string>
    <string name="title_activity_login">GlobalSMS - Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="pinpad_incorrect">This pinpad is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="device_settings">Device Settings</string>

    <string-array name="Proveedores">
        <item>Alvic</item>
        <item>EfiData</item>
    </string-array>

    <string-array name="locale">
        <item>EN</item>
        <item>DE</item>
        <item>ES</item>
        <item>IT</item>
    </string-array>
    <string name="btn_turno">Close Work Shift</string>
    <string name="btn_operacion">Check Operation</string>
    <string name="btn_dia">Daily Report</string>
    <string name="alert_cierre_turno">This process will close the current work shift and open new one. This action can NOT be undone</string>
    <string name="closing_workshift">Closing work shift...</string>
    <string name="titulo_cierre_turno">WARNING!!</string>
    <string name="btn_cierre_cancel">CANCEL</string>
    <string name="btn_cierre_aceptar">OK</string>
    <string name="titulo_check">Input the Code you want to Check</string>
    <string name="error_no_encontrado">Transaction NOT FOUND!!</string>
    <string name="error_no_data">No data Transactions for this Day</string>
    <string name="error_hay_reservas">We cannot close work shift, reserved transactions pending to close.</string>
    <string name="error_no_hay_operaciones">No transactions in this Work shift we cannot close it.</string>
    <string name="action_erase">Erase Local Data</string>
    <string name="action_backup">Backup Local Data</string>
    <string name="action_save">Save and Return to App</string>
    <string name="action_return">Return to App</string>
    <string name="action_exit">Exit App</string>
    <string name="precio_bio">BIO DIESEL</string>
    <string name="producto_bio">BIO DIESEL</string>
    <string name="toast_bio">Bio Diesel Selected</string>
    <string name="action_reset">Reset Pending counter</string>
    <string name="producto_gas">GAS</string>
    <string name="entrada_kilos">Input the Kilos for this Supply</string>
    <string name="sig_dialog_title">SIGN HERE</string>
    <string name="sig_hint_cancel">Cancel</string>
    <string name="sig_hint_clear">Clear</string>
    <string name="sig_hint_save">Save</string>
    <string name="kilometers">Kilometers</string>
    <string name="entrada_kms">Input Odometer KMs</string>
    <string name="hours">Hours</string>
    <string name="entrada_horas">Input Frigo Hours</string>
    <string name="verify_code">Enter the verification code</string>
    <string name="verify_send_code_error">There was an error when the server tried to send the verification code</string>
    <string name="verify_code_error">Incorrect verify code</string>
    <string name="verify_code_success">Correct verify code</string>

    <string name="loading">Loading...</string>

    <!-- BUTTONS-->
    <string name="btn_accept">Accept</string>
    <string name="btn_cancel">Cancel</string>

    <!-- Globalwallet -->
    <string name="authorized_products">Authorized products</string>
    <string name="max_quantity">Max quantity</string>
    <string name="transaction_validated">Transaction validated</string>
    <string name="transaction_completed">Transaction completed</string>
    <string name="refuel">Refuel</string>
    <string name="transaction_pending_ticket">TRANSACTION IN PROGRESS</string>
    <string name="transaction_completed_ticket">TRANSACTION COMPLETED</string>
    <string name="gas_a">Diesel</string>
    <string name="adblue">Adblue</string>
    <string name="gas_b">Red diesel</string>
    <string name="gas">Gas</string>
    <string name="card_not_allowed">Card not allowed</string>
    <string name="card_unlocking_title">Scanning error</string>
    <string name="card_unlocking_description">There was an error scanning the card. Please re-scan the QR code on the card.</string>
    <string name="sure_alert">Are you sure?</string>
    <string name="max_quantity_exceed_alert">It is not possible to complete the refueling since the limit of balance allowed for this card has been exceeded. Please have the driver contact his manager to have this limit increased.</string>
</resources>
