<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@android:color/background_dark"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verify_code"
            android:textColor="@android:color/white"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/verifyCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColor="@android:color/white"
            android:shadowColor="@android:color/white"
            android:inputType="number" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <Button
                android:id="@+id/btnCancel"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#e51400"
                android:fontFamily="@font/assistant_light"
                android:text="@string/btn_pinpad_cancel"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnAccept"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#8cbf26"
                android:fontFamily="@font/assistant_light"
                android:text="@string/btn_pinpad_ok"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>